# cookiecutter-fastapi

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: Makefile  README.md  app.py  pyproject.toml  requirements.txt  {% if cookiecutter.python == 'python venv' %} requirements.txt {% endif %}
{{cookiecutter.project_name}}/core/: __init__.py  settings.py
{{cookiecutter.project_name}}/core/db/: __init__.py  database.py
{{cookiecutter.project_name}}/core/endpoints/: __init__.py  auth.py
{{cookiecutter.project_name}}/core/models/: __init__.py  models.py
